Refine default template

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>KSN Informatika</title>
+    <title>OSN Informatika</title>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"
@@ -23,17 +23,19 @@
       <div class="row">
         <div class="col-md-12">
           <div class="page-header">
-            <h1>KSN INFORMATIKA</h1>
-            <p>Daring</p>
+            <img src="osn.png" style="float: left; height: 70px; width: 70px; margin-top: 20px; margin-right: 15px;"/>
+            <div style="float: left">
+              <h1>OSN Bidang Informatika</h1>
+              <p>Daring</p>
+            </div>
+            <img src="ia-toki.png" style="float: right; height: 70px; margin-top: 20px;"/>
             <div class="clearfix"></div>
           </div>
 
           <h4>Hari 0</h4>
 
           <p>
-            <small
-              >Terakhir diperbarui: <span id="lastUpdateTime"></span
-            ></small>
+            <small>Terakhir diperbarui: <span id="lastUpdateTime"></span></small>
           </p>
           <table class="table table-striped table-bordered">
             <thead>
