Add progress bar

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
           <p>
             <small>Terakhir diperbarui: <span id="lastUpdateTime"></span></small>
           </p>
+
+          <div class="progress">
+            <div id="progress-bar" class="progress-bar" role="progressbar">
+            </div>
+          </div>
+
           <table class="table table-striped table-bordered">
             <thead>
               <tr id="headers">
