--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
             <div class="clearfix"></div>
           </div>
 
-          <h4>Hari 0</h4>
+          <h4>Hari 1</h4>
+
+          <div class="alert alert-warning" role="alert">
+            Belum hasil resmi. Hanya menampilkan hasil <b>4 jam pertama</b> setiap harinya.
+          </div>
 
           <p>
             <small>Terakhir diperbarui: <span id="lastUpdateTime"></span></small>
