Adjust width on smaller width

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <thead>
               <tr id="headers">
                 <th class="col-rank">#</th>
-                <th class="col-name">Username</th>
-                <th class="col-name">Nama</th>
+                <th>Username</th>
+                <th>Nama</th>
                 <th class="col-school">Sekolah</th>
                 <th class="col-province">Provinsi</th>
                 <th class="col-score">Total</th>
